added time unit, added usc calibration

--- a/src/SuryaWebPortal/templates/result.html
+++ b/src/SuryaWebPortal/templates/result.html
@@ -21,7 +21,7 @@
 </ul>
 
 <ul>
-<li>Exposure Time: {{ result.computationConfiguration.exposedTime }} mins
+<li>Exposure Time: {{ result.computationConfiguration.exposedTime }} {{ result.computationConfiguration.timeUnits }} 
 <li>Air Flow Rate: {{ result.computationConfiguration.airFlowRate }} l/p
 <li>Filter Radius: {{ result.computationConfiguration.filterRadius }} cm
 </ul>
