-- added nav link for deployments directory -- basic template and views for displaying all the active deployment ids

--- a/src/SuryaWebPortal/templates/debug/deployments.html
+++ b/src/SuryaWebPortal/templates/debug/deployments.html
@@ -2,6 +2,16 @@
 {% block content %}
 
 <h2>Deployments</h2>
+<table>
+  <tr>
+    <th>Deployment ID</th>
+  </tr>
+  {% for d in deployments %}
+  <tr>
+    <td>{{ d }}</td>
+  </tr>
+  {% endfor %}
+</table>
 
 {% endblock %}
 
