--- a/src/SuryaWebPortal/templates/debug/debug.html
+++ b/src/SuryaWebPortal/templates/debug/debug.html
@@ -12,6 +12,9 @@
 <a href="{% url SuryaWebPortal.views.debug.debug.debug %}">Debug Main</a>
 </div>
 <div class="span-3 colborder">
+<a href="{% url SuryaWebPortal.views.debug.debug.deployments %}">Deployments</a>
+</div>
+<div class="span-3 colborder">
 <a href="{% url SuryaWebPortal.views.debug.debug.uploads %}">Uploads</a>
 </div>
 <div class="span-3 colborder">
