-- got processing result data displaying on upload page (for both failed and successful results) -- added table row highlighting so it's easier to identify and click through to uploads -- added a jquery library back in to enable quick jquery front end stuff -- other minor cleanup

--- a/src/SuryaWebPortal/templates/debug/view_deployment.html
+++ b/src/SuryaWebPortal/templates/debug/view_deployment.html
@@ -6,7 +6,21 @@
 .no {color:red;}
 table {border: 1px solid #999;}
 table th {border-bottom: 1px solid #999;}
+table tr.highlight_row td {background:#ffffcc !important;}
 </style>
+<script type="text/javascript">
+$(document).ready(function() {
+    $("#uploads_table tr").hover(
+        function() {
+            $(this).addClass("highlight_row");
+        },
+        function() {
+            $(this).removeClass("highlight_row");
+        }
+    );
+});
+</script>
+
 
 <h2 style="margin-bottom:0;">View Deployment: {{ dep_id }}</h2>
 <div class="breadcrumbs">
@@ -17,7 +31,7 @@ View Deployment: {{ dep_id }}
 <br />
 
 <h3>Uploads for this deployment</h3>
-<table>
+<table id="uploads_table">
   <tr>
     <th>Device ID</th>
     <th>Server Date Time</th>
@@ -28,7 +42,7 @@ View Deployment: {{ dep_id }}
   <tr class="{% cycle 'odd' 'even' %}">
     <td><a href="{% url SuryaWebPortal.views.debug.debug.view_upload dep_id u.id %}">{{ u.deviceId }}</a></td>
     <td>{{ u.serverDatetime }}</td>
-    <td><span class="{{ u.processing_success|yesno }}">{{ u.processing_success|yesno }}</span></td>
+    <td><span class="{{ u.processing_success|yesno }}">{{ u.processing_success|yesno|capfirst }}</span></td>
     <td>{{ u.misc }}</td>
   </tr>
   {% empty %}
