--- a/src/SuryaWebPortal/templates/debug/view_upload.html
+++ b/src/SuryaWebPortal/templates/debug/view_upload.html
@@ -14,9 +14,7 @@ View Upload
 </div>
 <br />
 
-<table>
-<tr>
-<td>
+<h3>Upload Data</h3>
 <ul>
 <li>Device ID: {{ up.deviceId }}
 <li>Deployment: {{ up.deploymentId }}
@@ -26,19 +24,47 @@ View Upload
 <li>Data Type: {{ up.datatype }}
 <li>GPS: {{ up.gpsLatLong }}, Alt: {{ up.gpsAltitude }}
 </ul>
-</td>
-<td>
+
 <ul>
 <li>Version: {{ up.version }}
 <li>AuxID: {{ up.auxId }}
 <li>Tag: {{ up.tag }}
 <li>Misc: {{ up.misc }}
 <li>Valid: {{ up.validFlag }}
-<li>Invalud Reason: {{ up.invalidReason }}
+<li>Invalid Reason: {{ up.invalidReason }}
 </ul>
-</td>
-</tr>
-</table>
 
+{% if up.processing_success %}
+<h3>Processing Results</h3>
+{% else %}
+<h3>Processing Results (FAILED)</h3>
+{% endif %}
+<ul>
+<li><a href="{% url SuryaWebPortal.views.files.uploadfile result.item.id %}">Click for original image</a>
+<li>Upload time: {{ result.item.serverDatetime }}
+<li>Capture time: {{ result.item.recordDatetime }}
+</ul>
+
+<ul>
+<li>BC Loading: {{ result.computationResult.result.BCAreaRed|floatformat:3  }} ug/cm^2
+<li>BC Concentration: {{ result.computationResult.result.BCVolRed|floatformat:3  }} ug/m^3
+</ul>
+
+<ul>
+<li>Exposure Time: {{ result.computationConfiguration.exposedTime }} {{ result.computationConfiguration.timeUnits }} 
+{% if result.computationConfiguration.airFlowRate < 20 %}
+<li>Air Flow Rate: {{ result.computationConfiguration.airFlowRate }} l/p
+{% else %}
+<li>Air Flow Rate: {{ result.computationConfiguration.airFlowRate }} cc/m
+{% endif %}
+<li>Filter Radius: {{ result.computationConfiguration.filterRadius }} cm
+</ul>
+
+{% if up.processing_success %}
+<h3>Debug Image</h3>
+<img src="{% url SuryaWebPortal.views.files.debugfile result.id %}" alt="Results Chart">
+<h3>Results Chart</h3>
+<img src="{% url SuryaWebPortal.views.files.chartfile result.id %}" alt="Debug Image">
+{% endif %}
 
 {% endblock %}
