--- a/src/SuryaWebPortal/templates/layout.html
+++ b/src/SuryaWebPortal/templates/layout.html
@@ -4,7 +4,7 @@
         <head>
                 <title>{% block title %}{% endblock %}</title>
 
-                <!-- <script type="text/javascript" src="/surya/static/js/jquery-1.4.2.min.js"></script> -->
+                <script type="text/javascript" src="/surya/static/js/jquery-1.7.2.min.js"></script>
 
                 <link rel="stylesheet" type="text/css" href="/surya/static/css/blueprint/screen.css" media="screen, projection" />
                 <link rel="stylesheet" type="text/css" href="/surya/static/css/blueprint/print.css" media="print"/>
