-- restricted the permissions around deployments and uploads to be restricted to the particular group you belong to -- restricted the admin nav to only true admins -- setup user proxy model so i could add methods to it ( deployment_list()! ) -- added an empty message for deployment list

--- a/src/SuryaWebPortal/templates/debug/deployments.html
+++ b/src/SuryaWebPortal/templates/debug/deployments.html
@@ -10,6 +10,8 @@
   <tr>
     <td><a href="{% url SuryaWebPortal.views.debug.debug.view_deployment d %}">{{ d }}</a></td>
   </tr>
+  {% empty %}
+  <tr><td>No Deployments Found</td></tr>
   {% endfor %}
 </table>
 
