--- a/src/SuryaWebPortal/templates/debug/view_deployment.html
+++ b/src/SuryaWebPortal/templates/debug/view_deployment.html
@@ -36,6 +36,7 @@ View Deployment: {{ dep_id }}
     <th>Device ID</th>
     <th>Server Date Time</th>
     <th>Successful?</th>
+    <th>Load, Conc</th>
     <th>Miscellaneous</th>
   </tr>
   {% for u in uploads %}
@@ -43,6 +44,7 @@ View Deployment: {{ dep_id }}
     <td><a href="{% url SuryaWebPortal.views.debug.debug.view_upload dep_id u.id %}">{{ u.deviceId }}</a></td>
     <td>{{ u.serverDatetime }}</td>
     <td><span class="{{ u.processing_success|yesno }}">{{ u.processing_success|yesno|capfirst }}</span></td>
+    <td>{{ u.processing_result_str }}</td>
     <td>{{ u.misc }}</td>
   </tr>
   {% empty %}
