--- a/src/SuryaWebPortal/templates/result.html
+++ b/src/SuryaWebPortal/templates/result.html
@@ -10,14 +10,8 @@
 
 
 <ul>
-<li><a href="{% url SuryaWebPortal.views.files.uploadfile result.item.id %}">Click for original image</a>
-<li>Upload time: {{ result.item.serverDatetime }}
-<li>Capture time: {{ result.item.recordDatetime }}
-</ul>
-
-<ul>
-<li>BC Loading: {{ result.computationResult.result.BCAreaRed|floatformat:3  }} ug/cm^2
-<li>BC Concentration: {{ result.computationResult.result.BCVolRed|floatformat:3  }} ug/m^3
+<li><h2>BC Concentration: {{ result.computationResult.result.BCVolRed|floatformat:5  }} ug/m^3</h2>
+<li><h2>BC Loading: {{ result.computationResult.result.BCAreaRed|floatformat:5  }} ug/cm^2</h2>
 </ul>
 
 <ul>
@@ -28,6 +22,14 @@
 <li>Air Flow Rate: {{ result.computationConfiguration.airFlowRate }} cc/m
 {% endif %}
 <li>Filter Radius: {{ result.computationConfiguration.filterRadius }} cm
+<li>Misc: {{ result.item.misc }}
+</ul>
+
+
+<ul>
+<li><a href="{% url SuryaWebPortal.views.files.uploadfile result.item.id %}">Click for original image</a>
+<li>Upload time: {{ result.item.serverDatetime }}
+<li>Capture time: {{ result.item.recordDatetime }}
 </ul>
 
 <h2>Debug Image</h2>
