--- a/src/SuryaWebPortal/templates/result.html
+++ b/src/SuryaWebPortal/templates/result.html
@@ -12,6 +12,7 @@
 <ul>
 <li><h2>BC Concentration: {{ result.computationResult.result.BCVolRed|floatformat:5  }} ug/m^3</h2>
 <li><h2>BC Loading: {{ result.computationResult.result.BCAreaRed|floatformat:5  }} ug/cm^2</h2>
+<li><h3>Warnings: {{ warnmsg }} (<- non empty warning message may mean an invalid result)</h3>
 </ul>
 
 <ul>
