updating old changes and fixes

--- a/src/SuryaWebPortal/static/css/blueprint/screen.css
+++ b/src/SuryaWebPortal/static/css/blueprint/screen.css
@@ -257,3 +257,13 @@ hr.space {background:#fff;color:#fff;visibility:hidden;}
 .clearfix:after, .container:after {content:"\0020";display:block;height:0;clear:both;visibility:hidden;overflow:hidden;}
 .clearfix, .container {display:block;}
 .clear {clear:both;}
+
+/* Form Styles */
+.form_table {}
+.form_table th {text-align:right;vertical-align:top;width:120px;}
+.form_table td {text-align:left;vertical-align:top;}
+.form_table .errorlist {color:#f00;}
+.form_table .xml_textarea {width:700px;}
+.form_table input[readonly] {color:#7F7F7F;}
+.form_table .help_text {font-size:0.9em;}
+
