--- a/src/SuryaWebPortal/templates/debug/view_upload.html
+++ b/src/SuryaWebPortal/templates/debug/view_upload.html
@@ -1,4 +1,4 @@
-p
+
 {% extends "layout.html" %}
 
 
@@ -8,7 +8,7 @@ p
 <div class="breadcrumbs">
 <a href="{% url SuryaWebPortal.views.debug.debug.deployments %}">Deployments</a>
 &nbsp;&raquo;&nbsp;
-<a href="{% url SuryaWebPortal.views.debug.debug.view_deployment dep_id %}">View Deployment: {{ dep_id }}</a>
+<a href="{% url SuryaWebPortal.views.debug.debug.view_deployment_day dep_id up.serverDatetime.year up.serverDatetime.month up.serverDatetime.day %}">View Deployment: {{ dep_id }}</a>
 &nbsp;&raquo;&nbsp;
 View Upload
 </div>
@@ -38,7 +38,7 @@ View Upload
 </ul>
 
 <ul>
-<li><a href="{% url SuryaWebPortal.views.files.uploadfile result.item.id %}">Click for original image</a>
+<li><a href="{% url SuryaWebPortal.views.files.uploadfile up.id %}">Click for original image</a>
 <li>Upload time: {{ result.item.serverDatetime }}
 <li>Capture time: {{ result.item.recordDatetime }}
 </ul>
