--- a/src/SuryaWebPortal/templates/layout.html
+++ b/src/SuryaWebPortal/templates/layout.html
@@ -5,10 +5,11 @@
                 <title>{% block title %}{% endblock %}</title>
 
                 <script type="text/javascript" src="/surya/static/js/jquery-1.7.2.min.js"></script>
-
+		<script type="text/javascript" src="/surya/static/js/jquery.calendrical.js"></script>
                 <link rel="stylesheet" type="text/css" href="/surya/static/css/blueprint/screen.css" media="screen, projection" />
                 <link rel="stylesheet" type="text/css" href="/surya/static/css/blueprint/print.css" media="print"/>
-
+		<link rel="stylesheet" type="text/css" href="/surya/static/css/jquery/calendrical.css" />
+    
     <!--[if lt IE 8]>
     <link rel="stylesheet" href="/surya/static/css/blueprint/ie.css" type="text/css" media="screen, projection">
     <![endif]-->
